ci: pin all runner versions
macos-latest runner is currently an Intel-based macOS, but it's being
migrated to become macos-14, which is ARM-based. Replace it with macos-13,
which is Intel-based, according to [1].

Similarly, turn ubuntu-latest into ubuntu-22.04 to avoid potential
surprises when ubuntu-latest becomes ubuntu-24.04.

[1]: https://github.com/actions/runner-images/blob/a0af039ba1565df601a4c5630c264ab777daf66a/README.md

--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build_packages:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -43,9 +43,9 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
           - os: windows-2022
-          - os: macos-latest
+          - os: macos-13
             arch: x86_64
             sha256sum:
               python: 6378dfd22f58bb553ddb02be28304d739cd730c1f95c15c74955c923a1bc3d6a
