--- a/.github/workflows/perfbench.yml
+++ b/.github/workflows/perfbench.yml
@@ -14,7 +14,7 @@ jobs:
   benchmark:
     name: Run performance benchmark
     if: ${{ !github.event.pull_request.head.repo.fork }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       PYTHONUNBUFFERED: 1
       # How many time to repeat each run
