--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -12,7 +12,7 @@ jobs:
 
   push_to_pypi:
     needs: build_release_assets
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v4
@@ -33,7 +33,7 @@ jobs:
           password: ${{ secrets.pypi_password }}
 
   release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: build_release_assets
     continue-on-error: true
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
@@ -85,7 +85,7 @@ jobs:
 
   push_to_docker_hub:
     name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
       - name: Checkout
@@ -101,7 +101,7 @@ jobs:
 
   push_to_github_packages:
     name: Push Docker image to GitHub Packages
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
       - name: Check out the repo
@@ -119,7 +119,7 @@ jobs:
   push_to_tap:
     needs: push_to_pypi
     name: Push to GitGuardian taps
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
       - name: Set up Python 3.9
@@ -146,7 +146,7 @@ jobs:
 
   push_to_cloudsmith:
     needs: build_release_assets
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
     steps:
       - name: Checkout
