chore: install and use pytest-xdist on functional tests
Do not use pytest-xdist on unit tests for now, some tests are flaky.

Also: remove pinning on pytest.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,10 +77,9 @@ dev = [
 ]
 
 tests = [
-    # pinning because of conflicting dependencies with exceptiongroup
-    "pytest==7.2.1",
     "pytest-mock",
     "pytest-socket",
+    "pytest-xdist",
     "pytest-voluptuous",
     "seed-isort-config",
     "snapshottest",
