--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,5 @@ inline-quotes = double
 max-line-length = 120
 ignore = E203, E704, W503
 exclude = **/snapshots/*.py, .venv, build
+per-file-ignores =
+    tests/unit/conftest.py: E501
