--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -166,8 +166,8 @@ jobs:
           path: packages
 
       - name: Push to Chocolatey
+        shell: bash
         run: |
-          nupkg_path=$(find ${{ steps.download-nupkg.outputs.download-path }} -maxdepth 1 -type f -name "*.nupkg" | head -n 1)
-          scripts/chocolatey/push $nupkg_path
+          scripts/chocolatey/push packages/ggshield.*.nupkg
         env:
           CHOCOLATEY_API_KEY: ${{ secrets.CHOCOLATEY_API_KEY }}
