--- a/.github/workflows/build_release_assets.yml
+++ b/.github/workflows/build_release_assets.yml
@@ -295,8 +295,19 @@ jobs:
       - name: Install requirements
         run: |
           case "${{ matrix.image }}" in
+            debian:*|ubuntu:*)
+              apt update
+              apt install --no-install-recommends -y git
+              ;;
+            rockylinux*)
+              yum install -y git-core
+              ;;
+            opensuse*)
+              zypper install -y git-core
+              ;;
             clearlinux*)
               swupd bundle-add libstdcpp
+              swupd bundle-add git
               ;;
           esac
 
@@ -312,20 +323,15 @@ jobs:
         run: |
           case "${{ matrix.image }}" in
             debian:*|ubuntu:*)
-              apt update
-              apt install --no-install-recommends -y git
               dpkg -i packages/*.deb
               ;;
             rockylinux*)
-              yum install -y git-core
               rpm -i packages/*.rpm
               ;;
             opensuse*)
-              zypper install -y git-core
               rpm -i packages/*.rpm
               ;;
             clearlinux*)
-              swupd bundle-add git
 
               # Unpack ggshield in /usr/local/ggshield
               pkg_dir=$PWD/packages
