feat(git-hooks): set repo remote fallback with env variable
In some configurations ggshield runs in repositories without a configured remote, for example when running in a git pre-receive hook. This commit adds a REPOSITORY_REMOTE_FALLBACK environment variable for setting a fallback value for the remote URL.

Issue #1158

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,11 @@ GITGUARDIAN_INSTANCE=https://dashboard.gitguardian.com/
 
 # Used by functional tests for the --ignore-known-secrets feature
 # Set this to a single-match secret known by your dashboard
-#TEST_KNOWN_SECRET=
+# TEST_KNOWN_SECRET=
 # Set this to a single-match secret unknown by your dashboard. Unlike
 # TEST_KNOWN_SECRET, this one has a default value, so you do not have to set
 # it unless the default value does not work for you
-#TEST_UNKNOWN_SECRET=
+# TEST_UNKNOWN_SECRET=
 
 # You might need to set those 2 vars to run tests
 # - push a valid GitGuardian test token in your workspace
@@ -16,3 +16,7 @@ GITGUARDIAN_INSTANCE=https://dashboard.gitguardian.com/
 # - and set TEST_GG_VALID_TOKEN_IGNORE_SHA to matching commit sha
 # TEST_GG_VALID_TOKEN=
 # TEST_GG_VALID_TOKEN_IGNORE_SHA=
+
+# Fallback value for the repository remote URL in case it cannot be determined using `git remote -v`
+# This variable is particularly relevant when running ggshield in a git pre-receive hook
+# GITGUARDIAN_GIT_REMOTE_FALLBACK_URL=
