--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "typing-extensions~=4.12.2",
     "urllib3~=2.2.2",
     "truststore>=0.10.1; python_version >= \"3.10\"",
+    "notify-py>=0.3.43",
 ]
 
 [project.urls]
